# tinycthread

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: tinycthread.h
src/posix/: tinycthread.c
src/win/: tinycthread.c
